--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -62,6 +62,11 @@
   }
 }
 
+.header__exit-info {
+  display: flex;
+  cursor: pointer;
+}
+
 .header__exit {
   color: $bglighterRed;
   font-family: "Rubik-Medium";
@@ -71,4 +76,8 @@
 .header__nik {
   color: rgba(51, 51, 51, 1);
   margin-right: 15px;
+}
+
+.header__newNameInput {
+  width: 124px;
 }
