--- a/src/components/tv/style.scss
+++ b/src/components/tv/style.scss
@@ -15,6 +15,7 @@
   display: flex;
   border-radius: 8px;
   padding: 20px;
+  margin-right: 10px;
 }
 
 .tv__leftCol {
@@ -32,3 +33,21 @@
 .tv__time-programs {
   margin: 8px 0;
 }
+
+
+//--scroll-bar---
+/* полоса прокрутки (скроллбар) */
+::-webkit-scrollbar {
+  width: 8px; /* ширина для вертикального скролла */
+  height: 500px;
+  //height: 8px; /* высота для горизонтального скролла */
+  background-color: rgba(242, 242, 242, 1);
+  
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(189, 189, 189, 1);
+  border-radius: 2px;
+}
+//--The end --scroll-bar---
